# ukraine_itn_wfst

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: tests.ipynb
tests/: test_cardinal.py  test_date.py  test_decimal.py  test_measure.py  test_money.py  test_ordinal.py  test_time.py  test_utils.py  test_word.py
ukr/: __main__.py  alphabet.py  graph_utils.py  utils.py  wfst.py
ukr/data/: measurements.tsv  month.tsv
ukr/data/currency/: currency_major.tsv  currency_minor.tsv
ukr/data/numbers/: __init__.py  cardinals_billion.tsv  cardinals_million.tsv  cardinals_thousand.tsv  decimal_delimiter.tsv  decimal_endings.tsv  quantity.tsv
ukr/data/numbers/accusative/: cardinals_digit.tsv  cardinals_hundred.tsv  cardinals_ties.tsv
ukr/data/numbers/dative/: cardinals_digit.tsv  cardinals_hundred.tsv  cardinals_teen.tsv
ukr/data/numbers/genitive/: cardinals_digit.tsv  cardinals_hundred.tsv  cardinals_teen.tsv  cardinals_ties.tsv  cardinals_zero.tsv
ukr/data/numbers/instrumental/: cardinals_hundred.tsv  cardinals_teen.tsv
ukr/data/numbers/nominative/: cardinals_hundred.tsv  cardinals_ties.tsv
ukr/data/numbers/ordinal/: ordinal_digit.tsv  (+4 more)
ukr/data/time/: hours.tsv  minutes.tsv  to_hour.tsv
ukr/taggers/: cardinal.py  date.py  decimal.py  decimals.py  measure.py  money.py  ordinal.py  punctuation.py  time.py  tokenize_and_classify.py  word.py
ukr/verbalizers/: cardinal.py  date.py  decimal.py  measure.py  money.py  ordinal.py  time.py  verbalize.py  verbalize_final.py  word.py
(+28 files in other folders)
